basic_challenge.html

--- a/cf_100_custom.html
+++ b/cf_100_custom.html
@@ -28,7 +28,7 @@
     width:100%;
     display:block;
     position:relative;
-    margin 0 auto;
+    margin: 0 auto;
     }
     .captcha-box {
       display: inline-block;
